    * 0143 ups_socomec_in_voltage, ups_socomec_out_voltage: Socomec UPS Devices, Input and Output Voltages...
    * 0732 df: now able to monitor inodes...
    * 0716 Add Linux caching agent also to normal agent RPM...
    * 0594 dell_poweredge_netdev: new check to monitor the status of network devices on Dells Poweredge Servers
    * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
    * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
    * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
    * 0305 FIX: apache_status: Fixed exception when agent reports HTML code as apache-status data...
    * 0104 FIX: mssql: Server instances with underline in name are now supported....
    * 0240 FIX: Virtualmachine names with space no longer have missing piggyback data...
    * 0310 FIX: apache_status: Improved handling of unexpeted data sent by agents...
    * 0088 FIX: esx_vsphere_datastores: fixed error with reported capacity of 0 bytes...
    * 0243 FIX: cisco_qos: no longer crashes when the qos policy name is not set...
    * 0326 FIX: hr_fs printer_supply: Improved translation of wrong encoded chars...
    * 0059 FIX: agent_vpshere: new option for supporting ESX 4.1...
    * 0334 FIX: cisco_fantray: Fixed error on Cisco devices which do not support this check...
    * 0355 FIX: heartbeat_crm: Now handling "Failed actions:" output in agent...
    * 0357 FIX: megaraid_bbu: Fixed expected state checking...
    * 0358 FIX: df: now ignores filesystems with a reported size of '-'...
    * 0360 FIX: multipath: Inventory handles non loaded kernel module now...
    * 0339 FIX: blade_bays blade_blades blade_blowers blade_health blade_mediatray blade_powerfan blade_powermod: fix scan function...
    * 0340 FIX: blade_health: fix check, it was totally broken...
    * 0363 FIX: mysql_capacity: Did use wrong calculated warn / crit thresholds...