@@ -114,6 +114,7 @@
     * 0732 df: now able to monitor inodes...
     * 0716 Add Linux caching agent also to normal agent RPM...
     * 0594 dell_poweredge_netdev: new check to monitor the status of network devices on Dells Poweredge Servers
+    * 0733 mem, solaris_mem: now able to configure amount of free memory...
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
